--- a/final project/index.html
+++ b/final project/index.html
@@ -1,4 +1,12 @@
 <!DOCTYPE html>
-<p>
-	hello world
-</p>
+	<nav class="menu">
+  <a class="logo" href="index.html">Midterm</a>
+
+  <ul class="menu-links">
+    <li><a href="index.html">Home</a></li>
+    <li><a href="activities.html">Activities</a></li>
+    <li><a href="dining.html">Dining</a></li>
+    <li><a href="statement.html">Statement</a></li>
+    <li><a href="contact.html">Contact</a></li>
+  </ul>
+</nav>
