--- a/final project/index.html
+++ b/final project/index.html
@@ -4,9 +4,9 @@
 
   <ul class="menu-links">
     <li><a href="index.html">Home</a></li>
-    <li><a href="activities.html">Activities</a></li>
-    <li><a href="dining.html">Dining</a></li>
-    <li><a href="statement.html">Statement</a></li>
+    <li><a href="browse.html">browse</a></li>
+    <li><a href="detail.html">Detail</a></li>
+    <li><a href="post.html">post</a></li>
     <li><a href="contact.html">Contact</a></li>
   </ul>
 </nav>
