--- a/final project/post.html
+++ b/final project/post.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<head>
+	<link rel="stylesheet" href="styles.css">
+</head>
 	<nav class="menu">
   <a class="logo" href="index.html">Midterm</a>
 
