Add navigation menu to browse.html

--- a/final project/browse.html
+++ b/final project/browse.html
@@ -1,1 +1,15 @@
+<!DOCTYPE html>
+<head>
+	<link rel="stylesheet" href="styles.css">
+</head>
+	<nav class="menu">
+  <a class="logo" href="index.html">Midterm</a>
 
+  <ul class="menu-links">
+    <li><a href="index.html">Home</a></li>
+    <li><a href="browse.html">browse</a></li>
+    <li><a href="detail.html">Detail</a></li>
+    <li><a href="post.html">post</a></li>
+    <li><a href="contact.html">Contact</a></li>
+  </ul>
+  </nav>
