--- a/final project/detail.html
+++ b/final project/detail.html
@@ -1,15 +1,80 @@
-<!DOCTYPE html>
+<!doctype html>
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Listing Details | Comet Market</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
-	<nav class="menu">
-  <a class="logo" href="index.html">Midterm</a>
+<body>
 
-  <ul class="menu-links">
-    <li><a href="index.html">Home</a></li>
-    <li><a href="browse.html">browse</a></li>
-    <li><a href="detail.html">Detail</a></li>
-    <li><a href="post.html">post</a></li>
-    <li><a href="contact.html">Contact</a></li>
-  </ul>
-</nav>
+<header class="site-header">
+  <div class="wrap topbar">
+    <a class="brand" href="index.html">
+      <div class="badge" aria-hidden="true"></div>
+      <div>
+        <h1>Comet Market</h1>
+        <span>Listing details</span>
+      </div>
+    </a>
+
+    <nav class="nav" aria-label="Main">
+      <a href="index.html">Home</a>
+      <a href="browse.html">Browse</a>
+      <a href="post.html">Post</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </div>
+</header>
+
+<main class="wrap">
+  <div class="page-head">
+    <h2>Listing Details</h2>
+    <p>This is the detailed view for a listing (matches your second wireframe idea).</p>
+  </div>
+
+  <section class="detail-grid">
+    <div class="card detail-photo">
+      <img src="images/sofa.jpg" alt="Gray sofa">
+    </div>
+
+    <div class="card detail-info">
+      <h3>Small Gray Sofa</h3>
+      <div class="price" style="font-size:var(--step-2);">$80</div>
+
+      <p style="margin:10px 0 0;">
+        <strong>Category:</strong> Household<br>
+        <strong>Condition:</strong> Good<br>
+        <strong>Pickup:</strong> Near campus
+      </p>
+
+      <div class="detail-actions">
+        <a class="btn" href="contact.html">Message Seller</a>
+        <a class="btn alt" href="browse.html">Back to Browse</a>
+      </div>
+
+      <h4 style="margin:14px 0 6px;">Description</h4>
+      <p style="margin:0;">
+        Great for an apartment or dorm lounge area. Clean, no tears.
+        Selling because I’m moving. Pickup only.
+      </p>
+
+      <div class="smallbox">
+        <strong>Seller:</strong> “Alex (UTD)”<br>
+        <strong>Preferred meet-up:</strong> Student Union / public spot
+      </div>
+    </div>
+  </section>
+
+  <footer>
+    <div class="card footbox">
+      <div>
+        <strong>Contact:</strong> cometmarket@utdallas.edu (example) • <strong>Phone:</strong> (000) 000-0000
+      </div>
+      <div>© 2025 Comet Market • UTD Student Project</div>
+    </div>
+  </footer>
+</main>
+
+</body>
+</html>
