--- a/final project/browse.html
+++ b/final project/browse.html
@@ -3,22 +3,19 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Browse Listings | Comet Market</title>
+  <title>Comet Market | Browse</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-<header class="site-header">
+<header>
   <div class="wrap topbar">
     <a class="brand" href="index.html">
-      <div class="badge" aria-hidden="true"></div>
-      <div>
-        <h1>Comet Market</h1>
-        <span>Browse listings</span>
-      </div>
+      <div class="logo-box"></div>
+      <div class="brand-title">Comet Market</div>
     </a>
 
-    <nav class="nav" aria-label="Main">
+    <nav>
       <a href="index.html">Home</a>
       <a href="browse.html">Browse</a>
       <a href="post.html">Post</a>
@@ -28,155 +25,80 @@
 </header>
 
 <main class="wrap">
-  <div class="page-head">
-    <h2>Browse</h2>
-    <p>Use categories and search to find stuff from other Comets.</p>
-  </div>
 
-  <section class="browse-grid">
-    <aside class="card filters">
+  <section class="section">
+    <h2>Browse Listings</h2>
+    <p>Use the filters and search to find items.</p>
+  </section>
+
+  <section class="section browse-layout">
+
+    <aside class="card">
       <h3>Filters</h3>
 
-      <div class="filter-row">
-        <label for="cat">Category</label>
-        <select id="cat">
-          <option>All</option>
-          <option>Household</option>
-          <option>Textbooks</option>
-          <option>School Supplies</option>
-          <option>Transportation</option>
-          <option>Electronics</option>
-        </select>
-      </div>
+      <label for="cat">Category</label>
+      <select id="cat">
+        <option>All</option>
+        <option>Household</option>
+        <option>Textbooks</option>
+        <option>School Supplies</option>
+        <option>Transportation</option>
+        <option>Electronics</option>
+      </select>
 
-      <div class="filter-row">
-        <label for="min">Min price</label>
-        <input id="min" type="text" placeholder="$0">
-      </div>
+      <label for="min">Min Price</label>
+      <input id="min" type="text" placeholder="$0">
 
-      <div class="filter-row">
-        <label for="max">Max price</label>
-        <input id="max" type="text" placeholder="$200">
-      </div>
+      <label for="max">Max Price</label>
+      <input id="max" type="text" placeholder="$200">
 
-      <div class="filter-row">
-        <label for="pick">Pickup</label>
-        <select id="pick">
-          <option>Any</option>
-          <option>On campus</option>
-          <option>Near campus</option>
-        </select>
-      </div>
-
-      <p style="margin-top:14px;">
+      <p style="margin-top:12px;">
         <button class="btn" type="button">Apply</button>
       </p>
-
-      <div class="smallbox">
-        Tip: Keep your listing title short + add a clear price.
-      </div>
     </aside>
 
-    <div class="card results">
-      <div class="searchbar">
-        <input type="text" placeholder="Search: sofa, lamp, bike, calculator...">
-        <button class="btn alt" type="button">Search</button>
+    <div class="card">
+      <h3>Results</h3>
+
+      <label for="search">Search</label>
+      <input id="search" type="text" placeholder="sofa, lamp, bike...">
+
+      <p style="margin-top:10px;">
+        <button class="btn btn-green" type="button">Search</button>
+      </p>
+
+      <div class="listings-grid" style="margin-top:12px;">
+        <div class="item-card">
+          <img src="images/sofa.jpg" alt="Sofa">
+          <p><strong>Small Sofa</strong> <span class="price">$80</span></p>
+          <a class="btn" href="detail.html">Details</a>
+        </div>
+
+        <div class="item-card">
+          <img src="images/lamp.jpg" alt="Lamp">
+          <p><strong>Desk Lamp</strong> <span class="price">$12</span></p>
+          <a class="btn" href="detail.html">Details</a>
+        </div>
+
+        <div class="item-card">
+          <img src="images/textbook.jpg" alt="Textbook">
+          <p><strong>Calculus Textbook</strong> <span class="price">$25</span></p>
+          <a class="btn" href="detail.html">Details</a>
+        </div>
       </div>
 
-      <div class="tags" aria-label="Quick categories">
-        <a class="tag active" href="browse.html">All</a>
-        <a class="tag" href="browse.html">Household</a>
-        <a class="tag" href="browse.html">Textbooks</a>
-        <a class="tag" href="browse.html">Supplies</a>
-        <a class="tag" href="browse.html">Transportation</a>
-        <a class="tag" href="browse.html">Electronics</a>
-      </div>
-
-      <div class="grid">
-        <article class="card item">
-          <img src="images/sofa.jpg" alt="Gray sofa">
-          <div class="info">
-            <h4>Small Gray Sofa</h4>
-            <div class="price">$80</div>
-            <div class="meta">Household • Near campus</div>
-            <p style="margin:10px 0 0;">
-              <a class="btn" href="detail.html">Details</a>
-            </p>
-          </div>
-        </article>
-
-        <article class="card item">
-          <img src="images/lamp.jpg" alt="Simple desk lamp">
-          <div class="info">
-            <h4>Desk Lamp</h4>
-            <div class="price">$12</div>
-            <div class="meta">Household • On campus</div>
-            <p style="margin:10px 0 0;">
-              <a class="btn" href="detail.html">Details</a>
-            </p>
-          </div>
-        </article>
-
-        <article class="card item">
-          <img src="images/textbook.jpg" alt="Textbook stack">
-          <div class="info">
-            <h4>Calculus Textbook</h4>
-            <div class="price">$25</div>
-            <div class="meta">Textbooks • Like new</div>
-            <p style="margin:10px 0 0;">
-              <a class="btn" href="detail.html">Details</a>
-            </p>
-          </div>
-        </article>
-
-        <article class="card item">
-          <img src="images/bike.jpg" alt="Bike parked outside">
-          <div class="info">
-            <h4>Campus Bike</h4>
-            <div class="price">$120</div>
-            <div class="meta">Transportation • Good condition</div>
-            <p style="margin:10px 0 0;">
-              <a class="btn" href="detail.html">Details</a>
-            </p>
-          </div>
-        </article>
-
-        <article class="card item">
-          <img src="images/lamp.jpg" alt="Coffee machine on counter">
-          <div class="info">
-            <h4>Coffee Machine</h4>
-            <div class="price">$20</div>
-            <div class="meta">Household • Works great</div>
-            <p style="margin:10px 0 0;">
-              <a class="btn" href="detail.html">Details</a>
-            </p>
-          </div>
-        </article>
-
-        <article class="card item">
-          <img src="images/textbook.jpg" alt="Notebook and pens">
-          <div class="info">
-            <h4>Notebook + Pens Bundle</h4>
-            <div class="price">$8</div>
-            <div class="meta">School supplies • On campus</div>
-            <p style="margin:10px 0 0;">
-              <a class="btn" href="detail.html">Details</a>
-            </p>
-          </div>
-        </article>
-      </div>
     </div>
+
   </section>
 
   <footer>
-    <div class="card footbox">
-      <div>
-        <strong>Contact:</strong> cometmarket@utdallas.edu (example) • <strong>Phone:</strong> (000) 000-0000
-      </div>
-      <div>© 2025 Comet Market • UTD Student Project</div>
+    <div class="footer-box">
+      <p><strong>Contact:</strong> cometmarket@utdallas.edu (example) | (000) 000-0000</p>
+      <p>© 2025 Comet Market — UTD Student Project</p>
     </div>
   </footer>
-</main>
 
+</main>
 </body>
 </html>
+
