--- a/final project/detail.html
+++ b/final project/detail.html
@@ -3,22 +3,19 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Listing Details | Comet Market</title>
+  <title>Comet Market | Details</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-<header class="site-header">
+<header>
   <div class="wrap topbar">
     <a class="brand" href="index.html">
-      <div class="badge" aria-hidden="true"></div>
-      <div>
-        <h1>Comet Market</h1>
-        <span>Listing details</span>
-      </div>
+      <div class="logo-box"></div>
+      <div class="brand-title">Comet Market</div>
     </a>
 
-    <nav class="nav" aria-label="Main">
+    <nav>
       <a href="index.html">Home</a>
       <a href="browse.html">Browse</a>
       <a href="post.html">Post</a>
@@ -28,53 +25,43 @@
 </header>
 
 <main class="wrap">
-  <div class="page-head">
-    <h2>Listing Details</h2>
-    <p>This is the detailed view for a listing (matches your second wireframe idea).</p>
-  </div>
 
-  <section class="detail-grid">
-    <div class="card detail-photo">
-      <img src="images/sofa.jpg" alt="Gray sofa">
+  <section class="section">
+    <h2>Listing Details</h2>
+    <p>Example detail page (your second wireframe idea).</p>
+  </section>
+
+  <section class="section card detail-layout">
+    <div>
+      <img src="images/sofa.jpg" alt="Sofa listing photo">
     </div>
 
-    <div class="card detail-info">
-      <h3>Small Gray Sofa</h3>
-      <div class="price" style="font-size:var(--step-2);">$80</div>
+    <div>
+      <h3>Small Sofa</h3>
+      <p class="price">$80</p>
 
-      <p style="margin:10px 0 0;">
-        <strong>Category:</strong> Household<br>
-        <strong>Condition:</strong> Good<br>
-        <strong>Pickup:</strong> Near campus
+      <p><strong>Category:</strong> Household</p>
+      <p><strong>Condition:</strong> Good</p>
+      <p><strong>Pickup:</strong> Near campus</p>
+
+      <p>
+        <strong>Description:</strong><br>
+        Clean sofa, no tears. Good for an apartment or dorm lounge.
       </p>
 
-      <div class="detail-actions">
-        <a class="btn" href="contact.html">Message Seller</a>
-        <a class="btn alt" href="browse.html">Back to Browse</a>
-      </div>
-
-      <h4 style="margin:14px 0 6px;">Description</h4>
-      <p style="margin:0;">
-        Great for an apartment or dorm lounge area. Clean, no tears.
-        Selling because I’m moving. Pickup only.
-      </p>
-
-      <div class="smallbox">
-        <strong>Seller:</strong> “Alex (UTD)”<br>
-        <strong>Preferred meet-up:</strong> Student Union / public spot
-      </div>
+      <a class="btn" href="contact.html">Message Seller</a>
+      <a class="btn btn-green" href="browse.html" style="margin-left:8px;">Back to Browse</a>
     </div>
   </section>
 
   <footer>
-    <div class="card footbox">
-      <div>
-        <strong>Contact:</strong> cometmarket@utdallas.edu (example) • <strong>Phone:</strong> (000) 000-0000
-      </div>
-      <div>© 2025 Comet Market • UTD Student Project</div>
+    <div class="footer-box">
+      <p><strong>Contact:</strong> cometmarket@utdallas.edu (example) | (000) 000-0000</p>
+      <p>© 2025 Comet Market — UTD Student Project</p>
     </div>
   </footer>
-</main>
 
+</main>
 </body>
 </html>
+
