--- a/final project/contact.html
+++ b/final project/contact.html
@@ -3,22 +3,19 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Contact | Comet Market</title>
+  <title>Comet Market | Contact</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-<header class="site-header">
+<header>
   <div class="wrap topbar">
     <a class="brand" href="index.html">
-      <div class="badge" aria-hidden="true"></div>
-      <div>
-        <h1>Comet Market</h1>
-        <span>Contact</span>
-      </div>
+      <div class="logo-box"></div>
+      <div class="brand-title">Comet Market</div>
     </a>
 
-    <nav class="nav" aria-label="Main">
+    <nav>
       <a href="index.html">Home</a>
       <a href="browse.html">Browse</a>
       <a href="post.html">Post</a>
@@ -28,60 +25,37 @@
 </header>
 
 <main class="wrap">
-  <div class="page-head">
+
+  <section class="section">
     <h2>Contact</h2>
-    <p>Questions, reporting an issue, or messaging a seller (matches your third wireframe vibe).</p>
-  </div>
+    <p>Send a message or ask a question.</p>
+  </section>
 
-  <section class="form-grid">
-    <div class="card form-card">
-      <form>
-        <label for="name">Your name</label>
-        <input id="name" type="text" placeholder="Your name">
+  <section class="section card">
+    <form>
+      <label for="name">Name</label>
+      <input id="name" type="text" placeholder="Your name">
 
-        <label for="email">Email</label>
-        <input id="email" type="email" placeholder="name@utdallas.edu">
+      <label for="email">Email</label>
+      <input id="email" type="email" placeholder="name@utdallas.edu">
 
-        <label for="topic">Topic</label>
-        <select id="topic">
-          <option>Message a seller</option>
-          <option>Report a listing</option>
-          <option>General question</option>
-        </select>
+      <label for="msg">Message</label>
+      <textarea id="msg" rows="6" placeholder="Write your message..."></textarea>
 
-        <label for="msg">Message</label>
-        <textarea id="msg" rows="6" placeholder="Write your message..."></textarea>
-
-        <p style="margin-top:14px;">
-          <button class="btn" type="submit">Send</button>
-          <a class="btn alt" href="browse.html" style="margin-left:8px;">Back to Browse</a>
-        </p>
-      </form>
-    </div>
-
-    <aside class="card side-info">
-      <h3>Safety reminder</h3>
-      <p style="margin:0;">
-        Meet in public places (Student Union is a good option). Don’t share passwords or send deposits to strangers.
+      <p style="margin-top:12px;">
+        <button class="btn" type="submit">Send</button>
       </p>
-
-      <div class="smallbox" style="margin-top:14px;">
-        <strong>Email:</strong> cometmarket@utdallas.edu (example)<br>
-        <strong>Phone:</strong> (000) 000-0000<br>
-        <strong>Hours:</strong> 9am–5pm (example)
-      </div>
-    </aside>
+    </form>
   </section>
 
   <footer>
-    <div class="card footbox">
-      <div>
-        <strong>Contact:</strong> cometmarket@utdallas.edu (example) • <strong>Phone:</strong> (000) 000-0000
-      </div>
-      <div>© 2025 Comet Market • UTD Student Project</div>
+    <div class="footer-box">
+      <p><strong>Contact:</strong> cometmarket@utdallas.edu (example) | (000) 000-0000</p>
+      <p>© 2025 Comet Market — UTD Student Project</p>
     </div>
   </footer>
-</main>
 
+</main>
 </body>
 </html>
+
