Update title and brand name in browse.html

--- a/final project/browse.html
+++ b/final project/browse.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Comet Market</title>
+  <title>Comet Market: Browse</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
 <div class="wrap topbar">
     <a class="brand" href="index.html">
       <img class="logo-img" src="images/utdlogo.jpeg" alt="Comet Market logo">
-      <div class="brand-title">Comet Market: Browse</div>
+      <div class="brand-title">Comet Market</div>
     </a>
     <nav>
       <a class="btn btn-orange" href="index.html">Home</a>
