Update textbook name in browse.html

--- a/final project/browse.html
+++ b/final project/browse.html
@@ -115,7 +115,7 @@
 
         <div class="item-card">
           <img src="images/textbook.jpg" alt="Textbook">
-           <p><strong>Calculus Textbook</strong> <span class="price">$15</span></p>
+           <p><strong>Oceans Textbook</strong> <span class="price">$15</span></p>
           <a class="btn" href="detail.html">Details</a>
         </div>
       </div>
