Update contact message in contact.html

--- a/final project/contact.html
+++ b/final project/contact.html
@@ -28,7 +28,7 @@
 
   <section class="section">
     <h2>Contact</h2>
-    <p>Send a message or ask a question.</p>
+    <p>Fill this if you have any questions or run into any problems!</p>
   </section>
   <section class="section card">
     <form>
