Update listing details description for clarity

--- a/final project/detail.html
+++ b/final project/detail.html
@@ -28,7 +28,7 @@
 
   <section class="section">
     <h2>Listing Details</h2>
-    <p>Details for one listing. Contact the seller if you&#39;re interested.</p>
+    <p>Details for listing, contact the seller in the contact section if you are interested or have any questions.</p>
   </section>
 
   <section class="section card detail-layout">
