Update contact message for clarity and detail

--- a/final project/contact.html
+++ b/final project/contact.html
@@ -28,7 +28,7 @@
 
   <section class="section">
     <h2>Contact</h2>
-    <p>Fill this if you have any questions or run into any problems!</p>
+    <p>Fill this if you have any questions, are interested in a listing, or run into any problems!</p>
   </section>
   <section class="section card">
     <form>
